--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,9 +29,14 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_KEY }}
 
-      # Copiar archivos usando SCP a través de Ngrok
-      # -P: Usa el puerto definido en tus secretos (ej. 12633)
-      # -o StrictHostKeyChecking=no: Evita el error de confirmación de host
+      # Paso de Seguridad: Crear carpeta y limpiar antes de copiar
+      # Esto confirma que la conexión SSH funciona y la carpeta existe
+      - name: Prep Windows Folder
+        run: |
+          ssh -p ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "powershell -command New-Item -ItemType Directory -Force -Path 'C:\nginx\html'"
+
+      # Copiar archivos
+      # CORRECCIÓN: Usamos 'C:/nginx/html' (Sin barra al inicio, comillas simples)
       - name: Deploy to Windows Nginx
         run: |
-          scp -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no -r dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:'/C:/nginx/html'
+          scp -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no -r dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:'C:/nginx/html'
