feat: update deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,5 @@ jobs:
       # CORRECCIÓN: Usamos 'C:/nginx/html' (Sin barra al inicio, comillas simples)
       - name: Deploy to Windows Nginx
         run: |
+          # Ruta exacta para Windows via OpenSSH: 'C:/nginx/html'
           scp -P ${{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no -r dist/* ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:'C:/nginx/html'
