--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,13 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "react"
-  }
+  },
+  "darkMode": "class",
+  "content": [
+    "./src/**/*.{astro,js,jsx,ts,tsx}",
+  ],
+  "theme": {
+    "extend": {}
+  },
+  "plugins": [],
 }
